<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorsFragment"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/doctors"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/topIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            tools:srcCompat="@mipmap/doctors_top_icon"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/topText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginStart="5dp"
            android:text="@string/child_practice" />
    </LinearLayout>

    <Spinner
        android:id="@+id/specializations"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/white_bgd_blue_border"
        android:layout_marginTop="15dp"
        android:entries="@array/specializations"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/doctorCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/atMainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/at_main"
        />
</LinearLayout>