<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DoctorDetailsFragment"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="start"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            android:text="ФИО"
            />

        <TextView
            android:id="@+id/specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Специальность"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appointmentMakeBtn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:background="@drawable/button1"
            android:textColor="@color/white"
            android:text="@string/make_appointment"
            android:textSize="17sp"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <TextView
            android:id="@+id/workExperienceDescriptionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:text="@string/work_experience"
            />

        <TextView
            android:id="@+id/workExperienceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/no_information"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/servicesDescriptionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/services"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/servicesDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/no_information"
            android:textSize="15sp"
            android:textColor="@color/dark_grey"
            android:visibility="visible"/>
    </LinearLayout>
</ScrollView>
